# south-dakota-lobbyists

./: .gitignore  README.md  download.py  fixes.json  pyproject.toml  readme.template  requirements.txt  rss.template  south-dakota-lobbyists-private.csv  south-dakota-lobbyists-public.csv  south-dakota-lobbyists.xml
private/: 2021.txt  2022.txt  2023.txt  2024.txt  2025.txt  parsed-names.json
public/: south-dakota-lobbyists-public.csv
