[project]
name = "south-dakota-lobbyists"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pdfplumber>=0.11.7",
    "playwright>=1.55.0",
    "probablepeople>=0.5.6",
    "requests>=2.32.5",
    "usaddress-scourgify>=0.6.0",
]
